# glex

shaders/: translate.vs
src/: BoundingBox.cc  BoundingBox.h  Camera.cc  Camera.h  CubeAsset.cc  CubeAsset.h  CubeAsset.lo  Diamond.cc  Diamond.h  GameAsset.cc  GameAsset.h  GameAssetManager.cc  GameAssetManager.h  GameWorld.cc  GameWorld.h  GameWorld.lo  Makefile  Makefile.am  Makefile.in  Math.h  PyCube.cc  PyCube.lo  libpytest.la  libtest.la  main.cc
src/.deps/: BoundingBox.Tpo  CubeAsset.Plo  CubeAsset.Po  Diamond.Po  GameAssetManager.Plo  GameAssetManager.Po  GameWorld.Plo  GameWorld.Po  PyCube.Plo  main.Po
src/.libs/: libpytest.la  libpytest.lai  libpytest.so.0  libpytest.so.0.0.0  libtest.lai  libtest.so.0.0.0
